@@ -1,4 +1,4 @@
-package com.example.card_app.Service;//выбор инфы юзера для security в виде UserService
+package com.example.card_app.Service;
 
 import com.example.card_app.Entity.User;
 import com.example.card_app.Repository.UserRepository;
@@ -8,21 +8,29 @@ import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
-import java.util.List;
+import java.util.Collections;
 
 @Service
 public class CustomUserDetailsService implements UserDetailsService {
+
     private final UserRepository userRepository;
-    public CustomUserDetailsService(UserRepository userRepository) { this.userRepository = userRepository; }
+
+    public CustomUserDetailsService(UserRepository userRepository) {
+        this.userRepository = userRepository;
+    }
 
     @Override
     public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
-        User user = userRepository.findByUsername(username)
-                .orElseThrow(() -> new UsernameNotFoundException("User not found"));
-        return new org.springframework.security.core.userdetails.User(
-                user.getGmail(),
-                user.getPassword(),
-                List.of(new SimpleGrantedAuthority("ROLE_" + user.getRole().name()))
-        );
+        User user = userRepository.findByGmail(username)
+                .orElseThrow(() -> new UsernameNotFoundException("User not found with email: " + username));
+
+        // ВАЖНО: Spring Security ожидает роли с префиксом ROLE_
+        String role = "ROLE_" + user.getRole().name();
+
+        return org.springframework.security.core.userdetails.User.builder()
+                .username(user.getGmail())
+                .password(user.getPassword())
+                .authorities(Collections.singletonList(new SimpleGrantedAuthority(role)))
+                .build();
     }
 }
